[tool.poetry]
name = "logo-github-organization"
version = "0.1.0"
description = "Logo para la organización Análisis y modelamiento numérico 1 2021-1 en GitHub."
authors = ["Carlos Aznarán Laos <caznaranl@uni.pe>"]
license = "GPL2"

[tool.poetry.dependencies]
python = "^3.9"
manim = "^0.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
